# my-first-blog

./: .gitignore  Makefile  pyproject.toml
blog/: admin.py  models.py  serializers.py  views.py
blog/migrations/: 0001_initial.py  0002_auto_20200610_1551.py
blog_server/: middlewaries.py  settings.py  urls.py
users/: models.py
users/migrations/: 0001_initial.py
